add title + theme color

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <meta property="og:description" content="want to keep up to date with me? go here.">
     <meta name="twitter:card" content="summary" />
     <meta name="author" content="S Stewart">
+    <meta name="theme-color" content="#212530" />
+    <title>tilda's abode</title>
     <style>
      body { background-color: #212530; }
      /* A sort of "box" to keep content in */
