--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
          padding-left: 10px;
          padding-right: 10px;
          padding-bottom: 5px;
-         background-color: #23232B;
+         background-color: #212530;
      }
      .text-gradient {
         background: linear-gradient(to right, #6190e8, #a7bfe8);
