--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
      .gh-hover:hover, .tw-hover:hover, .rd-hover:hover, .dc-hover:hover, .pt-hover:hover {
         transform: scale(1.25);
      }
-     .discord-tag:after { content: "tilda#9999"; }
-     .github-tag:after { content: "/tilda"; }
-     .twitter-tag:after { content: "/imtilda"; }
-     .patreon-tag:after { content: "/lold"; }
-     .reddit-tag:after { content: "/u/RShotZz"; }
+     .discord-tag:hover:after { content: "tilda#9999"; }
+     .github-tag:hover:after { content: "/tilda"; }
+     .twitter-tag:hover:after { content: "/imtilda"; }
+     .patreon-tag:hover:after { content: "/lold"; }
+     .reddit-tag:hover:after { content: "/u/RShotZz"; }
      /* Media queries */
     @media screen 
     and (min-device-width: 1200px) 
