clean up: stage 1.5 (fix)

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
          padding-right: 5px;
          padding-bottom: 5px;
      }
-     /* url tags and stuff */
+     .fab { color: white !important; }
      .tag { font-size: 12px; }
      .tag:hover { color: #bcd; }
      .gh-hover:hover { background-color: #181717; }
